--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>OneCutOne Tech</title>
+    <title>LJC APPS</title>
     <meta name="OnecutOne" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png"/>
 
@@ -49,8 +49,8 @@
 
         <div class="hero row">
             <div class="hero-right col-sm-6 col-sm-6">
-                <h1 class="header-headline bold"> &copy; OneCutOne Tech<br></h1>
-                <h4 class="header-running-text light">We are a company striving to provide the best Video Processing Tool for iOS & Android</h4>
+                <h1 class="header-headline bold"> &copy; Lai Jia Chun<br></h1>
+                <h4 class="header-running-text light">Design are meant to be loved, not to be understood</h4>
              <!--   <a href="#email-form">
                     <button class="hero-btn"> Download FREE!</button>
                 </a>
@@ -58,7 +58,7 @@
             </div><!--hero-left-->
 
             <div class="col-sm-6 col-sm-6 ipad">
-                <img class="ipad-screen img-responsive" src="assets/images/screen.png"/>
+                <img class="ipad-screen img-responsive" src="assets/images/iPhones.png"/>
             </div>
 
             <div><img class="mouse" src="assets/images/mouse.svg"/></div>
@@ -70,232 +70,15 @@
 </div><!--hero-background-->
 
 
-<!-- Features
-  ================================================== -->
-
-<div id="features" class="features-section">
-
-    <div class="features-container row">
-
-        <h2 class="features-headline light">New Product is Coming Soon</h2>
-
-        <div class="col-sm-4 feature">
-
-            <div class="feature-icon">
-                <img class="feature-img" src="assets/images/responsive.svg">
-            </div>
-            <h5 class="feature-head-text"> Awaiting Disclose </h5>
-           <!--  <p class="feature-subtext light"> Trim,Cut,Reverse,Volume,Speed</p> -->
-        </div>
-
-        <div class="col-sm-4 feature">
-            <div class="feature-icon feature-display-mid">
-                <img class="feature-img" src="assets/images/customizable.svg">
-            </div>
-            <h5 class="feature-head-text feature-display-mid"> Awaiting Disclose </h5>
-       <!--     <p class="feature-subtext light feature-display-mid"> Change the colors, pictures or any
-                of the sections
-                to suit your needs.</p>-->
-        </div>
-
-        <div class="col-sm-4 feature">
-            <div class="feature-icon feature-display-last">
-                <img class="bullet-img" src="assets/images/design.svg">
-            </div>
-            <h5 class="feature-head-text  feature-display-last"> Awaiting Disclose </h5>
-       <!--     <p class="feature-subtext light feature-display-last"> Trendy and fresh design, fits any
-                website.</p>-->
-        </div>
-    </div> <!--features-container-->
-</div> <!--features-section-->
-
-<!-- Logos
-  ================================================== 
-
-<div class="logos-section">
-    <img class="logos" src="assets/images/logos.png"/>
-</div><!--logos-section-->
-
-<!-- White-Section
-  ==================================================
-
-<div class="white-section row">
-
-    <div class="imac col-sm-6">
-        <img class="imac-screen img-responsive" src="assets/images/imac.png">
-    </div>
-    <!--imac
-
-    <div class="col-sm-6">
-
-        <div class="white-section-text">
-
-            <h2 class="imac-section-header light">SIMPLE AND BEAUTIFUL</h2>
-
-            <div class="imac-section-desc">
-
-            <span>  Use Nova theme for your next web project.
-                It is completely customizable so you can change any of the sections to fit your needs.
-                Nova Theme is Free for any kind of use, personal and commercial. Have fun and good luck!</span>
-            </div>
-        </div>
-    </div>
-</div><!--white-section-text-section--->
-
-
-<!-- Pricing
-  ==================================================
-<div id="pricing" class="pricing-background">
-
-    <h2 class="pricing-section-header light text-center">CHOOSE YOUR PRICING PLAN</h2>
-    <h4 class=" pricing-section-sub text-center light">Pick any of our super affordable pricing plans</h4>
-
-    <div class="pricing-table row">
-        <div class="col-sm-4">
-            <div class="plan">
-                <h3 class="plan-title light">BASIC</h3>
-                <h4 class="plan-cost bold">15</h4>
-                <h5 class="monthly">per month</h5>
-                <ul class="plan-features">
-                    <li>Up to 7 Projects</li>
-                    <li>2 Additional Developers</li>
-                </ul>
-                <div class="plan-price-div text-center">
-                    <div class="choose-plan-div">
-                        <a class="plan-btn light" href="#">
-                            Get Started
-                        </a>
-                    </div>
-                </div>
-            </div><!--basic-plan--->
-        </div><!--col
-
-        <div class="col-sm-4">
-            <div class="mid-plan">
-                <h3 class="plan-title light">AGENCY</h3>
-                <h4 class="plan-cost bold">55</h4>
-                <h5 class="monthly">per month</h5>
-                <ul class="plan-features">
-                    <li>Up to 25 Projects</li>
-                    <li>2 Additional Developers</li>
-                    <li>Unlimited Support</li>
-                </ul>
-                <div class="plan-price-div text-center">
-                    <div class="choose-plan-div">
-                        <a class="plan-btn light" href="#">
-                            Get Started
-                        </a>
-                    </div>
-                </div>
-            </div><!--pro-plan--->
-        </div><!--col
-
-        <div class="col-sm-4">
-            <div class="plan">
-                <h3 class="plan-title light">PRO</h3>
-                <h4 class="plan-cost bold">75</h4>
-                <h5 class="monthly">per month</h5>
-                <ul class="plan-features">
-                    <li>Up to 25 Projects</li>
-                    <li>2 Additional Developers</li>
-                    <li>Unlimited Support</li>
-                    <li>1.5GB Disk Space</li>
-                </ul>
-                <div class="plan-price-div text-center">
-                    <div class="choose-plan-div">
-                        <a class="plan-btn light" href="#">
-                            Get Started
-                        </a>
-                    </div>
-                </div>
-            </div><!--pro-plan--->
-        </div><!--col
-
-    </div>  <!--pricing-table
-
-</div><!--pricing-background-->
-
-<!-- Team
-  ================================================== 
-
-<div id="team" class="team">
-    <h2 class="team-section-header light text-center">THE TEAM</h2>
-
-    <div class="team-container row">
-
-
-        <div class="col-sm-4 team-member">
-            <img src="assets/images/cto.png">
-            <div class="team-member-text">
-                <h4 class="team-member-position light">CTO</h4>
-                <h5 class="bold">Johnny B Good</h5>
-                <p class="light">The brains behind the whole operation</p>
-                <a href="http://www.twitter.com"><img class="team-social-icon" src="assets/images/team-twitter.svg"></a>
-                <a href="http://www.facebook.com"><img class="team-social-icon"
-                                                       src="assets/images/team-facebook.svg"></a>
-                <a href="https://plus.google.com/"><img class="team-social-icon"
-                                                        src="assets/images/team-google.svg"></a>
-            </div>
-        </div>
-
-        <div class="col-sm-4 team-member">
-            <img src="assets/images/ceo.png">
-            <div class="team-member-text">
-                <h4 class="team-member-position light">CEO</h4>
-                <h5 class="bold">Roll Over Beethoven</h5>
-                <p class="light">The one that puts it all together </p>
-                <a href="http://www.twitter.com"><img class="team-social-icon" src="assets/images/team-twitter.svg"></a>
-                <a href="http://www.facebook.com"><img class="team-social-icon"
-                                                       src="assets/images/team-facebook.svg"></a>
-                <a href="https://plus.google.com/"><img class="team-social-icon"
-                                                        src="assets/images/team-google.svg"></a>
-            </div>
-        </div>
-
-        <div class="col-sm-4 team-member">
-            <img src="assets/images/cfo.png">
-            <div class="team-member-text">
-                <h4 class="team-member-position light">CFO</h4>
-                <h5 class="bold">Chuck Berry</h5>
-                <p class="light">The guy with his hand on the wallet</p>
-                <a href="http://www.twitter.com"><img class="team-social-icon" src="assets/images/team-twitter.svg"></a>
-                <a href="http://www.facebook.com"><img class="team-social-icon"
-                                                       src="assets/images/team-facebook.svg"></a>
-                <a href="https://plus.google.com/"><img class="team-social-icon"
-                                                        src="assets/images/team-google.svg"></a>
-            </div>
-
-        </div>
-        <! -- .row -
-
-    </div> <!--team-container--->
-
-</div> <!--team-section--->
-
 <!-- Email-Section
   ================================================== -->
 
 <div class="blue-section">
     <h3 class="blue-section-header bold"> Contact Us</h3>
-    <h4 class="blue-section-subtext light">support@onecutone.com</h4>
+    <h4 class="blue-section-subtext light">laijiachun@outlook.com</h4>
+    <h4 class="blue-section-subtext light">Fight for Everyday</h4>
     <a href="https://onecutone.com/privacypolicy.html">Privacy Policy</a>
     <a href="https://onecutone.com/termsofuse.html">Terms of Use</a>
-
-<!--e
-    <div class="email-form-div">
-        <form id="email-form" class="form-group email-form" action="mailchimp.php" method="post">
-            <input type="email" class="form-control email-input" name="email" id="newsletter-email-input"
-                   placeholder="Enter your email">
-            <button type="submit" class="btn submit-btn">Download</button>
-            <div id="newsletter-spinner">
-                <i class="fa fa-cog fa-spin" style="font-size:24px"></i>
-            </div>
-        </form>
-    </div>
-    <!--email-form-div--
-
-    <div id="newsletter-loading-div"></div>
-    <!--email-form-->
 </div>
 <!--blue-section-->
 
