--- a/index.html
+++ b/index.html
@@ -50,19 +50,18 @@
         <div class="hero row">
             <div class="hero-right col-sm-6 col-sm-6">
                 <h1 class="header-headline bold"> &copy; Lai Jia Chun<br></h1>
-                <h4 class="header-running-text light">Design are meant to be loved, not to be understood</h4>
+                <h4 class="header-running-text light">Design are meant to be loved, not to be understood <br><br></h4>
+                <h4 class="header-running-text light">Email:laijiachun@outlook.com <br><br></h4>
+                <a href="https://onecutone.com/privacypolicy.html">Privacy Policy</a>
+                <a href="https://onecutone.com/termsofuse.html">Terms of Use</a>
              <!--   <a href="#email-form">
                     <button class="hero-btn"> Download FREE!</button>
                 </a>
              -->
             </div><!--hero-left-->
 
-            <div class="col-sm-6 col-sm-6 ipad">
-                <img class="ipad-screen img-responsive" src="assets/images/iPhones.png"/>
-            </div>
 
-            <div><img class="mouse" src="assets/images/mouse.svg"/></div>
-
+        
         </div><!--hero-->
 
     </div> <!--hero-container-->
@@ -73,13 +72,6 @@
 <!-- Email-Section
   ================================================== -->
 
-<div class="blue-section">
-    <h3 class="blue-section-header bold"> Contact Us</h3>
-    <h4 class="blue-section-subtext light">laijiachun@outlook.com</h4>
-    <h4 class="blue-section-subtext light">Fight for Everyday</h4>
-    <a href="https://onecutone.com/privacypolicy.html">Privacy Policy</a>
-    <a href="https://onecutone.com/termsofuse.html">Terms of Use</a>
-</div>
 <!--blue-section-->
 
 <!-- Footer
