--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
              -->
             </div><!--hero-left-->
 
+            <div class="col-sm-6 col-sm-6 ipad">
+                <img class="ipad-screen img-responsive" src="assets/images/iPhones.png"/>
+            </div>
 
         
         </div><!--hero-->
