--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <h1 class="header-headline bold"> &copy; Lai Jia Chun<br></h1>
                 <h4 class="header-running-text light">Design are meant to be loved, not to be understood <br><br></h4>
                 <h4 class="header-running-text light">Email : laijiachun@outlook.com <br><br></h4>
-                <a href="../privacy.html">Privacy Policy<br></a>
-                <a href="../terms.html">Terms & Conditions</a>
+                <a href="./ljc/privacy.html">Privacy Policy<br></a>
+                <a href="./ljc/terms.html">Terms & Conditions</a>
              <!--   <a href="#email-form">
                     <button class="hero-btn"> Download FREE!</button>
                 </a>
